flux/apps/int/grimmory/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grimmory
  labels:
    app.kubernetes.io/instance: grimmory
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: grimmory
      app.kubernetes.io/instance: grimmory
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grimmory
        app.kubernetes.io/instance: grimmory
    spec:
      dnsPolicy: ClusterFirst
      securityContext:
        fsGroup: 1000
      containers:
        - name: grimmory
          image: "ghcr.io/grimmory-tools/grimmory:v3.5.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 6060
              protocol: TCP
          volumeMounts:
            - name: books
              mountPath: /books
            - name: bookdrop
              mountPath: /bookdrop
              subPath: bookdrop
            - name: config
              mountPath: /app/data
              subPath: appdata
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi

        - name: mariadb
          image: "lscr.io/linuxserver/mariadb:11.4.8"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config-pvc
        - name: books
          persistentVolumeClaim:
            claimName: books-pvc
        - name: bookdrop
          persistentVolumeClaim:
            claimName: bookdrop-pvc
